fix: call fetchSurahs on window load

--- a/index.html
+++ b/index.html
@@ -1378,6 +1378,7 @@
             }
 
             loadHistory();
+            fetchSurahs();
 
             // Request Persistent Storage
             if (navigator.storage && navigator.storage.persist) {
