--- a/index.html
+++ b/index.html
@@ -1425,9 +1425,17 @@
             select.innerHTML = '<option>Loading Surahs...</option>';
 
             try {
-                // Direct call to external API
-                const response = await fetch('https://api.alquran.cloud/v1/surah');
-                if (!response.ok) throw new Error('Failed to fetch surahs');
+                // Direct call to external API with robust options
+                const response = await fetch('https://api.alquran.cloud/v1/surah', {
+                    method: 'GET',
+                    mode: 'cors',
+                    cache: 'reload', // Force network, ignore browser HTTP cache
+                    headers: {
+                        'Accept': 'application/json'
+                    }
+                });
+
+                if (!response.ok) throw new Error(`Failed to fetch surahs: ${response.status} ${response.statusText}`);
 
                 const data = await response.json();
                 const surahs = data.data; // API structure is { code: 200, status: "OK", data: [...] }
@@ -1443,7 +1451,9 @@
                 });
             } catch (e) {
                 console.error("Error loading surahs:", e);
-                select.innerHTML = `<option>Error: ${e.message}</option>`;
+                // Display detailed error for debugging
+                const debugMsg = `${e.name}: ${e.message}`;
+                select.innerHTML = `<option>Error: ${debugMsg}</option>`;
             } finally {
                 select.disabled = false;
             }
