--- a/index.html
+++ b/index.html
@@ -1437,7 +1437,16 @@
 
                 if (!response.ok) throw new Error(`Failed to fetch surahs: ${response.status} ${response.statusText}`);
 
-                const data = await response.json();
+                const text = await response.text();
+                let data;
+                try {
+                    data = JSON.parse(text);
+                } catch (parseError) {
+                    // It's not JSON. Likely HTML error or empty.
+                    const snippet = text.substring(0, 100).replace(/</g, '&lt;'); // Escape HTML tags for display
+                    throw new Error(`Invalid JSON response: "${snippet}..."`);
+                }
+
                 const surahs = data.data; // API structure is { code: 200, status: "OK", data: [...] }
                 surahListCache = surahs;
 
