style: increase audio player size for better mobile usability

--- a/index.html
+++ b/index.html
@@ -305,13 +305,13 @@
                 <div class="max-w-5xl mx-auto">
                     <div
                         class="bg-slate-800/90 backdrop-blur-md p-4 rounded-2xl shadow-xl border border-slate-700/50 flex flex-col justify-center">
-                        <audio id="audioPlayer" controls class="w-full h-10 outline-none mb-2"></audio>
+                        <audio id="audioPlayer" controls class="w-full h-16 outline-none mb-2"></audio>
 
                         <!-- Simple Repeat Control -->
                         <div class="flex justify-end">
                             <button id="btn-loop-surah" onclick="toggleSurahLoop()"
-                                class="text-xs px-3 py-1.5 rounded-lg transition-all flex items-center gap-1.5 border border-slate-600 bg-slate-700/50 text-slate-400 hover:bg-slate-700 hover:text-white">
-                                <span class="text-sm">🔁</span> <span>Loop Surah</span>
+                                class="text-sm px-4 py-2 rounded-lg transition-all flex items-center gap-1.5 border border-slate-600 bg-slate-700/50 text-slate-400 hover:bg-slate-700 hover:text-white">
+                                <span class="text-base">🔁</span> <span>Loop Surah</span>
                             </button>
                         </div>
 
