style: force audio player scale using css transform

--- a/index.html
+++ b/index.html
@@ -305,7 +305,8 @@
                 <div class="max-w-5xl mx-auto">
                     <div
                         class="bg-slate-800/90 backdrop-blur-md p-4 rounded-2xl shadow-xl border border-slate-700/50 flex flex-col justify-center">
-                        <audio id="audioPlayer" controls class="w-full h-16 outline-none mb-2"></audio>
+                        <audio id="audioPlayer" controls class="w-full h-16 outline-none mb-4 mt-2"
+                            style="transform: scale(1.02); transform-origin: center;"></audio>
 
                         <!-- Simple Repeat Control -->
                         <div class="flex justify-end">
