--- a/index.html
+++ b/index.html
@@ -1415,23 +1415,25 @@
                     .catch(err => console.log('Service Worker Failed', err));
             }
         };
-        <script>
+    </script>
+    <script src="surah-data.js"></script>
+    <script>
         // --- Read Mode Logic ---
-            let surahListCache = null;
+        let surahListCache = null;
 
 
 
-            async function fetchSurahs() {
+        async function fetchSurahs() {
             const select = document.getElementById('surahSelect');
             select.disabled = true;
 
             // 1. Try Local Static Data (Fastest/Robust)
             if (typeof SURAH_DATA !== 'undefined' && SURAH_DATA.length > 0) {
                 console.log("[DATA] Using static Surah list");
-            surahListCache = SURAH_DATA;
-            populateSurahDropdown(select, SURAH_DATA);
-            select.disabled = false;
-            return;
+                surahListCache = SURAH_DATA;
+                populateSurahDropdown(select, SURAH_DATA);
+                select.disabled = false;
+                return;
             }
 
             // 2. Fallback: Network Fetch (If static file missing)
@@ -1440,39 +1442,39 @@
             try {
                 // Direct call to external API with robust options
                 const response = await fetch('https://api.alquran.cloud/v1/surah', {
-                method: 'GET',
-            mode: 'cors',
-            cache: 'reload', // Force network, ignore browser HTTP cache
-            headers: {
-                'Accept': 'application/json'
+                    method: 'GET',
+                    mode: 'cors',
+                    cache: 'reload', // Force network, ignore browser HTTP cache
+                    headers: {
+                        'Accept': 'application/json'
                     }
                 });
 
-            if (!response.ok) throw new Error(`Failed to fetch surahs: ${response.status} ${response.statusText}`);
+                if (!response.ok) throw new Error(`Failed to fetch surahs: ${response.status} ${response.statusText}`);
 
-            const text = await response.text();
-            let data;
-            try {
-                data = JSON.parse(text);
+                const text = await response.text();
+                let data;
+                try {
+                    data = JSON.parse(text);
                 } catch (parseError) {
                     // It's not JSON. Likely HTML error or empty.
                     const snippet = text.substring(0, 100).replace(/</g, '&lt;'); // Escape HTML tags for display
-        throw new Error(`Invalid JSON response: "${snippet}..."`);
+                    throw new Error(`Invalid JSON response: "${snippet}..."`);
                 }
 
-        const surahs = data.data; // API structure is { code: 200, status: "OK", data: [...] }
-        surahListCache = surahs;
+                const surahs = data.data; // API structure is { code: 200, status: "OK", data: [...] }
+                surahListCache = surahs;
 
-        populateSurahDropdown(select, surahs);
+                populateSurahDropdown(select, surahs);
 
             } catch (e) {
-            console.error("Error loading surahs:", e);
-            // Display detailed error for debugging
-            const debugMsg = `${e.name}: ${e.message}`;
-            select.innerHTML = `<option>Error: ${debugMsg}</option>`;
-        } finally {
-            select.disabled = false;
-        }
+                console.error("Error loading surahs:", e);
+                // Display detailed error for debugging
+                const debugMsg = `${e.name}: ${e.message}`;
+                select.innerHTML = `<option>Error: ${debugMsg}</option>`;
+            } finally {
+                select.disabled = false;
+            }
         }
 
         function populateSurahDropdown(select, surahs) {
